fix(md): math overflow

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -115,3 +115,8 @@ blockquote {
 li {
   --at-apply: line-height-relaxed;
 }
+
+mjx-container {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
